--- a/styles/Doc.module.css
+++ b/styles/Doc.module.css
@@ -3,12 +3,17 @@
   box-sizing: border-box;
   padding: 0 1em;
   margin: 1em auto;
-  border: 1px dashed;
   min-width: 375px;
   max-width: 1200px;
   min-height: 375px;
   max-height: 100%;
   max-height: 100vh;
+}
+
+.main-doc {
+  width: 100%;
+  border: 1px dashed;
+  box-sizing: border-box;
 }
 
 .doc-title {
@@ -19,4 +24,10 @@
 }
 .doc-desc {
   text-indent: 2em;
+}
+.doc-read-item-container {
+  text-indent: 2em;
+}
+.doc-read-item-container:hover a {
+  color: rgba(215, 238, 171, 0.849);
 }
