--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,3 +32,28 @@
   justify-content: space-between;
   gap: 2em;
 }
+
+.ani-container {
+  width: 100%;
+  height: 100px;
+  padding: 0 24px;
+  margin: 8px 0;
+  background-color: white;
+  position: relative;
+}
+
+.ani-box {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: red;
+}
+
+.box {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  bottom: 0;
+  right: 100px;
+  background-color: green;
+}
